<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.ucr.cs.cs167.groupC1</groupId>
  <artifactId>group1_projectC</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>group1_projectC</name>
  <url>http://www.myorganization.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <beast.version>0.10.1-RC1</beast.version>
    <spark.version>3.5.0</spark.version>
    <scala.version>2.12.18</scala.version>
    <scala.compat.version>2.12</scala.compat.version>
    <scala.maven.plugin.version>4.5.6</scala.maven.plugin.version>
    <maven.compiler.arg> </maven.compiler.arg>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>edu.ucr.cs.bdlab</groupId>
      <artifactId>beast-spark</artifactId>
      <version>${beast.version}</version>
    </dependency>

    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.compat.version}</artifactId>
      <version>${spark.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.compat.version}</artifactId>
      <version>${spark.version}</version>
   </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- This plugin compiles Scala files -->
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>${scala.maven.plugin.version}</version>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>scala-test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>edu.ucr.cs.cs167.groupC1.BeastScala</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <useFile>false</useFile>
          <disableXmlReport>true</disableXmlReport>
          <!-- Make tests run with OpenJDK 9 or later -->
          <argLine>${maven.compiler.arg}</argLine>
          <!-- If you have classpath issue like NoDefClassError,... -->
          <!-- <useManifestOnlyJar>false</useManifestOnlyJar> -->
          <includes>
            <include>**/*Test.*</include>
            <include>**/*Suite.*</include>
          </includes>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <profiles>
    <profile>
      <!-- Activate this profile when Java version is 9 or later -->
      <id>jdk9</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <!-- Set compiler arg to use add-opens for Java 9+ -->
        <maven.compiler.arg>--add-opens java.base/java.nio=ALL-UNNAMED
          --add-opens java.base/java.util=ALL-UNNAMED
          --add-opens java.base/java.lang=ALL-UNNAMED
          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
          --add-opens java.base/java.lang.invoke=ALL-UNNAMED</maven.compiler.arg>
      </properties>
    </profile>
  </profiles>
</project>
